--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,19 @@ services:
       - ./data/replica:/data/replica
     ports:
       - 27018:27018
+  redis:
+    image: redis
+    # environment:
+    #   # ALLOW_EMPTY_PASSWORD is recommended only for development.
+    #   - ALLOW_EMPTY_PASSWORD=yes
+    #   - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
+    # labels:
+    #   kompose.service.type: nodeport
+    ports:
+      - '6379:6379'
+    volumes:
+      - 'redis_data:/bitnami/redis'
+
+volumes:
+  redis_data:
+    driver: local
