--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "3"
 services:
-  message:
-    build: message/
-    ports:
-      - "9007:9007"
-    links:
-      - messageapp
-      - mongodb_message
-      - replica_message
-      - redis
-      # - credit
-    depends_on:
-      - messageapp
-      - mongodb_message
-      - replica_message
-      - redis
+  # message:
+  #   build: message/
+  #   ports:
+  #     - "9007:9007"
+  #   links:
+  #     - messageapp
+  #     - mongodb_message
+  #     - replica_message
+  #     - redis
+  #     # - credit
+  #   depends_on:
+  #     - messageapp
+  #     - mongodb_message
+  #     - replica_message
+  #     - redis
   # credit:
   #   build: credit/
   #   ports:
