--- a/credit/package.json
+++ b/credit/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bull": "^3.4.8",
     "express": "^4.16.4",
     "express-json-validator-middleware": "^1.2.3",
     "mongodb": "^3.1.9",
