--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -16,5 +16,6 @@ frontend http-in
 backend servers
     balance roundrobin
 
-    server server1 message1:9007 maxconn 32
-    server server2 message2:9008 maxconn 32
+    server server1 message1:9007 maxconn 32 check inter 2000 fall 3 rise 2
+    server server2 message2:9008 maxconn 32 check inter 2000 fall 3 rise 2
+    server server3 message3:9009 maxconn 32 check inter 2000 fall 3 rise 2
