--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,115 @@
 version: "3"
 services:
-  # exercise5:
-  #   build: .
-  #   ports:
-  #     - "9005:9005"
-  #   links:
-  #     - mongodb
-  #     - replica
+  message1:
+    build: message/
+    ports:
+      - "9007:9007"
+    links:
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+      - credit
+    depends_on:
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+    environment:
+      - PORT=9007
+  message2:
+    build: message/
+    ports:
+      - "9008:9008"
+    links:
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+      - credit
+    depends_on:
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+    environment:
+      - PORT=9008
+  message3:
+    build: message/
+    ports:
+      - "9009:9009"
+    links:
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+      - credit
+    depends_on:
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+    environment:
+      - PORT=9009
+  credit:
+    build: credit/
+    ports:
+      - "9017:9017"
+    links:
+      - mongodb_credit
+      - replica_credit
+      - redis
+    depends_on:
+      - mongodb_credit
+      - replica_credit
+      - redis
   messageapp:
     image: cabify/backend-bootcamp-messageapp
     ports:
       - "3000:3000"
-  mongodb:
+
+  mongodb_credit:
     image: mongo
+    command: mongod --port 27017    
     volumes:
-      - ./data/db:/data/db
+      - ./credit/data/db:/credit/data/db
     ports:
       - 27017:27017
-  replica:
+  replica_credit:
     image: mongo
-    command: mongod --port 27018
+    command: mongod --port 27018    
     volumes:
-      - ./data/replica:/data/replica
+      - ./credit/data/replica:/credit/data/replica
     ports:
       - 27018:27018
+
+  mongodb_message:
+    image: mongo
+    command: mongod --port 27027
+    volumes:
+      - ./message/data/db:/message/data/db
+    ports:
+      - 27027:27027
+  replica_message:
+    image: mongo
+    command: mongod --port 27028
+    volumes:
+      - ./message/data/replica:/message/data/replica
+    ports:
+      - 27028:27028
+
+  redis:
+    hostname: redis
+    image: redis
+    ports:
+      - 6379:6379
+  haproxy:
+    image: haproxy:latest
+    depends_on:
+      - message1
+      - message2
+      - credit
+    ports:
+      - 80:80
+    volumes: 
+        - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
