--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  message1:
-    build: message/
+  service-v1:
+    image: service-v1
     ports:
       - "9007:9007"
     links:
@@ -17,8 +17,10 @@ services:
       - redis
     environment:
       - PORT=9007
-  message2:
-    build: message/
+      - SERVICE_NAME=service-v1
+
+  service-v2:
+    image: service-v2
     ports:
       - "9008:9008"
     links:
@@ -34,23 +36,8 @@ services:
       - redis
     environment:
       - PORT=9008
-  message3:
-    build: message/
-    ports:
-      - "9009:9009"
-    links:
-      - messageapp
-      - mongodb_message
-      - replica_message
-      - redis
-      - credit
-    depends_on:
-      - messageapp
-      - mongodb_message
-      - replica_message
-      - redis
-    environment:
-      - PORT=9009
+      - SERVICE_NAME=service-v2
+
   credit:
     build: credit/
     ports:
@@ -63,6 +50,7 @@ services:
       - mongodb_credit
       - replica_credit
       - redis
+
   messageapp:
     image: cabify/backend-bootcamp-messageapp
     ports:
@@ -103,13 +91,28 @@ services:
     image: redis
     ports:
       - 6379:6379
-  haproxy:
-    image: haproxy:latest
+    
+  registrator:
+    image: gliderlabs/registrator
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock
+    command: -internal consul://consul:8500
     depends_on:
-      - message1
-      - message2
-      - credit
-    ports:
-      - 80:80
+      - consul
+    links:
+      - consul
+  
+  consul:
+    image: consul
+    command: "agent -server -bootstrap -ui -client=0.0.0.0 -bind='{{ GetPrivateIP }}'"
+
+  balancer:
+    image: haproxy:1.8-alpine
+    depends_on:
+      - registrator
+    links:
+      - registrator
     volumes: 
-        - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
+    ports:
+      - 48151:48151
