--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,22 +1,43 @@
 global
-    daemon
-    maxconn 256
+        maxconn     20000
+        ulimit-n    40022
+        log         127.0.0.1 local0
+        uid         200
+        gid         200
+        chroot      /var/empty
+        nbproc      4
+        daemon
+
+resolvers consul
+   nameserver dns consul:8600
+   resolve_retries 3
+   hold valid 100ms
 
 defaults
-    log global
-    mode http
-    timeout connect 5000ms
-    timeout client 50000ms
-    timeout server 50000ms
+        log     global
+        mode    http
+        option  httplog
+        option  dontlognull
+        timeout connect 5000
+        timeout client  50000
+        timeout server  50000
+        default-server init-addr none
 
-frontend http-in
-    bind *:80
-    default_backend servers
+frontend general
+  bind :48151
+  maxconn 10000
+  option httplog
+  acl mistery_shopper hdr(MISTERY_SHOPPER) -i
+  use_backend canary if mistery_shopper
+  default_backend app
 
-backend servers
-    balance roundrobin
+backend app
+   mode     http
+   balance  roundrobin
+   server-template appv1 5 service-v1.service.consul:8080 inter 1s resolvers consul resolve-prefer ipv4 check weight 90
+   server-template appv2 1 service-v2.service.consul:8080 inter 1s resolvers consul resolve-prefer ipv4 check weight 10
 
-    option httpchk GET /health
-    server server1 message1:9007 maxconn 32 check inter 2000 fall 3 rise 2
-    server server2 message2:9008 maxconn 32 check inter 2000 fall 3 rise 2
-    server server3 message3:9009 maxconn 32 check inter 2000 fall 3 rise 2
+backend canary
+   mode     http
+   balance  roundrobin
+   server-template app 5 service-v2.service.consul:8080 inter 1s resolvers consul resolve-prefer ipv4 check 
