--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -7,12 +7,10 @@ global
         chroot      /var/empty
         nbproc      4
         daemon
-
 resolvers consul
    nameserver dns consul:8600
    resolve_retries 3
    hold valid 100ms
-
 defaults
         log     global
         mode    http
@@ -22,22 +20,21 @@ defaults
         timeout client  50000
         timeout server  50000
         default-server init-addr none
-
 frontend general
   bind :48151
   maxconn 10000
   option httplog
-  acl mistery_shopper hdr(MISTERY_SHOPPER) -i
+  acl mistery_shopper req.hdr(X-MISTERY-SHOPPER) -m found
   use_backend canary if mistery_shopper
   default_backend app
-
 backend app
    mode     http
    balance  roundrobin
-   server-template appv1 5 service-v1.service.consul:8080 inter 1s resolvers consul resolve-prefer ipv4 check weight 90
-   server-template appv2 1 service-v2.service.consul:8080 inter 1s resolvers consul resolve-prefer ipv4 check weight 10
-
+   stats enable
+   stats uri /serverstats
+   server-template appv1 5 service-v1.service.consul:9007 inter 1s resolvers consul resolve-prefer ipv4 check weight 80%
+   server-template appv2 1 service-v2.service.consul:9008 inter 1s resolvers consul resolve-prefer ipv4 check weight 20%
 backend canary
    mode     http
    balance  roundrobin
-   server-template app 5 service-v2.service.consul:8080 inter 1s resolvers consul resolve-prefer ipv4 check 
+   server-template app 1 service-v2.service.consul:80 inter 1s resolvers consul resolve-prefer ipv4 check 
