changed docker-compose to exercise10 setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  service-v1:
+  message:
     image: mapno/service-v1
     links:
       - messageapp
@@ -8,7 +8,6 @@ services:
       - replica_message
       - redis
       - credit
-      - balancer
     depends_on:
       - messageapp
       - mongodb_message
@@ -17,32 +16,8 @@ services:
     environment:
       - PORT=9007
       - SERVICE_NAME=service-v1
-    deploy:
-      replicas: 5
-    expose:
-      - 9007
-
-  service-v2:
-    image: mapno/service-v2
-    links:
-      - messageapp
-      - mongodb_message
-      - replica_message
-      - redis
-      - credit
-      - balancer
-    depends_on:
-      - messageapp
-      - mongodb_message
-      - replica_message
-      - redis
-    environment:
-      - PORT=9008
-      - SERVICE_NAME=service-v2
-    deploy:
-      replicas: 1
-    expose:
-      - 9008
+    ports:
+      - "9007:9007"
 
   credit:
     build: credit/
@@ -58,7 +33,7 @@ services:
       - redis
 
   messageapp:
-    image: cabify/backend-bootcamp-messageapp
+    image: cabify/backend-bootcamp-messageapp:exercise10
     ports:
       - "3000:3000"
 
@@ -97,28 +72,3 @@ services:
     image: redis
     ports:
       - 6379:6379
-    
-  registrator:
-    image: gliderlabs/registrator
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock
-    command: -internal consul://consul:8500
-    depends_on:
-      - consul
-    links:
-      - consul
-  
-  consul:
-    image: consul
-    command: "agent -server -bootstrap -ui -client=0.0.0.0 -bind='{{ GetPrivateIP }}'"
-
-  balancer:
-    image: haproxy:1.8-alpine
-    depends_on:
-      - registrator
-    links:
-      - registrator
-    volumes: 
-      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
-    ports:
-      - 48151:48151
