--- a/message/package.json
+++ b/message/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.3.4",
     "nodemon": "^1.18.4",
     "redis": "^2.8.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "winston": "^3.1.0"
   }
 }
