--- a/message/package.json
+++ b/message/package.json
@@ -21,7 +21,9 @@
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.4",
     "nodemon": "^1.18.4",
+    "prom-client": "^11.2.0",
     "redis": "^2.8.0",
+    "response-time": "^2.3.2",
     "uuid": "^3.3.2",
     "winston": "^3.1.0"
   }
