--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,3 +79,8 @@ services:
       - 9090:9090
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+  
+  grafana:
+    image: grafana/grafana
+    ports:
+      - 3010:3000
